tests/sksl/errors/golden/InterfaceBlockScope.glsl
### Compilation failed:

error: 3: unknown identifier 'x'
1 error
